<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.findag.agenda3pantallas.Activity3"
    android:orientation="vertical">

    <!--TextView que nos muestra un saludo incial en esta pantalla-->
    <TextView
        android:id="@+id/txvSaludoP3"
        android:text="@string/txvSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <!--El siguiente TextView y EditText hacen referencia al nombre -->
    <TextView
        android:id="@+id/txvNombreP3"
        android:text="@string/txvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/edtNombreP3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <!--El siguiente TextView y EditText hacen referencia al telefono -->
    <TextView
        android:id="@+id/txvTelefonoP3"
        android:text="@string/txvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/edtTelefonoP3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="phone"
        />

    <!--Boton usado para confirmar la edicion del contacto -->
    <Button
        android:id="@+id/btnEditarP3"
        android:text="@string/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
</LinearLayout>
